--- a/Calculator/stylesheet.css
+++ b/Calculator/stylesheet.css
@@ -77,7 +77,7 @@ header {
 }
 
 input{
-  width: 100%;
+  width: 500px;
   height: 50px;
   font-size: 24px;
   margin-bottom: 10px;
@@ -134,6 +134,8 @@ input{
   font-size: 38px;
 }
 
+
+
  
 }
 
@@ -154,6 +156,17 @@ input{
   }
   .header-name {
   font-size: 30px;
+}
+input{
+  width: 400px;
+}
+  
+}
+
+@media (max-width: 420px) {
+
+input{
+  width: 300px;
 }
   
 }
@@ -185,6 +198,8 @@ input{
   font-size: 28.5px;
 }
  
-
+input{
+  width: 100%;
+}
 
 }
