completed task date: 10/25/2025

--- a/Gallary Gallaria/stylesheet.css
+++ b/Gallary Gallaria/stylesheet.css
@@ -22,16 +22,11 @@ header {
   font-size: 40.3px;
 }
 
-.gallery-button button {
-  background-color: #ffffff00;
-  border: 3px solid #ffde59;
-  color: #ffffff;
-  border-radius: 50%;
-  font-size: 40px;
-  cursor: pointer;
-}
+
 .main-gallery {
+
   column-count: 4;
+
   row-gap: 45px;
   column-gap: 39px;
   padding: 10px;
@@ -40,6 +35,8 @@ header {
   
   
 }
+
+
 
 .img-preview {
   width: 100%;
@@ -56,14 +53,114 @@ header {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+/* main grey baground */
+.preview-box{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgb(145, 143, 143,0.5);
+  backdrop-filter: blur(3px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items:stretch;
+    visibility:hidden;
+
+}
+
+/* the one that contain images and previous and next buttons */
+
+.open-image{
+  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+/* the one that contain close button*/
+
+.close-image{
+position: absolute;
+top: 0;
+right: 0;
+  display: flex;
+  align-items: end;
+  flex-direction: column;
+}
+
+/* buttons of navigations */
+
+.nav{
+  background-color:#ffffff00;
+  padding: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+  border: none;
+ 
+}
+
+.nav:active{
+  transform: scale(0.9);
+}
+.nav .svg{
+  width: 100px;
+  height: 100px;
+  background-color: none;
+ 
+}
+
+
+
+
+.display-box{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+ gap:0;
+}
+/*  box for name */
+
+.data{ 
+ background: linear-gradient(to top,  #ffffff00);
+ display: flex;
+ justify-content: center;
+ align-items: center;
+  color: white;
+  font-size: 23px;
+  visibility: visible;
+
+
+}
+
+.name{
+  text-align: center;
+}
+
+
+.preview-image-display {
+  max-width: 80vw;
+  max-height: 80vh;
+  border-radius: 20px;
+  object-fit: contain;
+  border: none;
+}
+
+
+
+
+
+
+
 @media (max-width: 1200px) {
    header{
      padding-right: 20px;
     padding-left: 20px;
   }
-  .gallery-button button {
-    font-size: 35px;
-  }
+  
 
   .header-name {
   font-size: 38px;
@@ -72,6 +169,33 @@ header {
   .main-gallery {
     column-count: 3;
   }
+
+    .nav{
+  
+  padding: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+
+}
+
+.nav .svg{
+  width: 60px;
+  height: 60px;
+  background-color: none;
+ 
+}
+}
+
+@media (max-width:1000px) {
+
+ 
+
+.preview-image-display {
+  max-width: 70vw;
+  max-height: 70vh;
+
+}
+  
 }
 
 @media (max-width: 768px) {
@@ -79,9 +203,7 @@ header {
      padding-right: 18px;
     padding-left: 18px;
   }
-  .gallery-button button {
-    font-size: 25px;
-  }
+ 
   .header-name {
   font-size: 30px;
 }
@@ -91,6 +213,36 @@ header {
     column-gap: 29px;
     padding: 5px;
   }
+
+  .nav{
+  
+  padding: 8px;
+  padding-left: 15px;
+  padding-right: 15px;
+
+}
+
+.nav .svg{
+  width: 60px;
+  height: 60px;
+  background-color: none;
+ 
+}
+
+.preview-image-display {
+  max-width: 70vw;
+  max-height: 70vh;
+
+}
+}
+
+@media (max-width:600px) {
+
+.preview-image-display {
+  max-width: 50vw;
+  max-height: 50vh;
+
+}
 }
 
 @media (max-width: 480px) {
@@ -101,9 +253,7 @@ header {
     gap: 10%;
   }
 
-  .gallery-button button {
-    font-size: 15px;
-  }
+  
   .header-name {
   font-size: 28.5px;
 }
@@ -118,6 +268,21 @@ header {
     padding: 5px;
   }
 
+  .nav{
+  
+  padding: 8px;
+  padding-left: 8px;
+  padding-right: 8px;
+
+}
+
+.nav .svg{
+  width: 40px;
+  height: 40px;
+  background-color: none;
+ 
+}
+
   .img-item{
     width: 100%;
     display: flex;
@@ -128,4 +293,13 @@ header {
     width: 80%;
     
   }
+
+  .preview-image-display {
+  max-width: 70vw;
+  max-height: 70vh;
+
 }
+}
+
+
+
